--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p class="main"><u>This is a Heading</u></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
