--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p class="main"><u>This is a Heading</u></p>
+	<div class="main">
+		<h4 id="heading">This is a Heading</h4>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
